[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/gunner/hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://addons/hood/HeartsContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/gunner/menus/GunnerControls.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/hood/HudLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gunner/hud/Pickups.tscn" type="PackedScene" id=5]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
offset_right = 388.0
offset_bottom = 280.0
size_flags_horizontal = 3

[node name="HeartsContainer" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
offset_right = 388.0
offset_bottom = 30.0

[node name="PickupsContainer" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 34.0
offset_right = 388.0
offset_bottom = 64.0

[node name="TargetsDestroyed" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 68.0
offset_right = 388.0
offset_bottom = 81.0
text = "Targets Destroyed: 0"
align = 0

[node name="TargetsRemaining" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 85.0
offset_right = 388.0
offset_bottom = 98.0
text = "Targets Remaining: 0"
align = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 392.0
offset_right = 492.0
offset_bottom = 280.0

[node name="GunnerControls" parent="HBoxContainer/VBoxContainer2" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 100.0
offset_bottom = 77.0

[node name="Notifications" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_top = 81.0
offset_right = 100.0
offset_bottom = 280.0
size_flags_vertical = 3
